# MCP-Chatbot

./: .env.template  .gitignore  README.md  pyproject.toml  setup.ps1  start.ps1  test-mcp.ps1  test_tools.py
client/: __init__.py  app.py  mcp_client.py
datasets/: filtered_iris.csv  sales_data.csv  weather.csv
server/: __init__.py  main.py  tools.py
sessions/: 3d70432b-6810-431d-b0f2-e7f2d96affb9.json  59ceef3a-5926-4ea7-b346-7be27cea5c0e.json  6d3683a8-8e37-4ac9-a82f-412e1722dfec.json
