[project]
name = "mcp-data-chatbot"
version = "0.1.0"
description = "MCP-compatible data analysis chatbot with Streamlit UI"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=0.2.0",
    "anthropic>=0.40.0",
    "streamlit>=1.30.0",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "openpyxl>=3.1.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server", "client"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]